--- a/ddp-workspace/projects/ddp-testboston/src/assets/i18n/ht.json
+++ b/ddp-workspace/projects/ddp-testboston/src/assets/i18n/ht.json
@@ -186,21 +186,72 @@
     "TeamSection": {
       "Title": "Ekip nou an",
       "Text": "Nou se yon ekip doktè ak chèchè nan domèn maladi enfektyez ki vle konprann pi byen fason COVID-19 afekte moun ak kominote yo pou nou kapab sèvi tout pasyan yo pi byen. ",
-      "List": [
+      "PIs": [
         {
-          "Name": "Doktè Ann E. Woolley, MD",
-          "Affiliations": "Enstriktè nan medsin",
-          "Info": "Doktè Ann Woolley se yon enstriktè nan medsin ak yon doktè nan domèn maladi enfektyez nan Brigham & Women’s Hospital ak Harvard Medical School. Doktè Woolley te resevwa yon BS nan jeni mekanik ak ayewospasyal nan Princeton University nan ane 2001 ak yon sètifika pòs-bakaloreya nan etid premedikal nan Columbia University anvan fòmasyon nan sante piblik ak nan medsin nan Mount Sinai School of medicine nan New York. Avèk yon konsantrasyon sou transplantasyon, epatit, ak enfeksyon kadyak, rechèch Doktè Woolley te demontre nouvo metòd pou itilize an tout sekirite ògàn moun ki konsidere kòm donatè men ki pa t apwopriye oparavan. Travay li te pèmèt rakousi tan datant pou moun ki bezwen don ògàn, epi pèmèt plis moun kapab chwazi pou yo vin donatè ògàn pou sove lavi."
+          "Name": "[HT] Ann E. Woolley, MD, MPH",
+          "Affiliations": "[HT] Associate Physician, Infectious Diseases, Brigham and Women’s Hospital; Instructor of Medicine, Harvard Medical School",
+          "Info": "[HT] Dr. Ann Woolley is the Associate Clinical Director for Solid Organ Transplant Infectious Diseases at Brigham and Women’s Hospital and a Clinical Investigator whose research focuses on expanding treatment and diagnostics."
         },
         {
-          "Name": "Doktè Lisa A. Cosimi, MD",
-          "Affiliations": "Asistan pwofesè, maladi enfektyèz nan Harvard Medical School, Global Health Equity",
-          "Info": "Doktè Cosimi se yon medsen asosye nan Global Health Equity & Incetuous Disease nan Brigham & Women’s Hospital, ak pwofesè adjwen nan medsin nan Harvard Medical School. Doktè Cosimi te resevwa yon BA nan ekonomi nan Cornell University an 1992 ak doktora an medsin nan Weill Cornell Medical College an 1996.  Li te fè rezidans li nan medsin entèn ak swen primè nan Massachusetts General Hospital epi fòmasyon nan maladi enfektyez nan pwogram bous konbine Partners.  Rechèch Doktè Cosimi te konsantre sou fason pou ranfòse sistèm sante yo ak kalite swen sante yo nan anviwònman ki gen resous limite. Gwoup li a, Partnership for Health Advancement in Vietnam (HAIVN), te asosye avèk Ministè Sante Vyetnam, Inivèsite Medikal ak lopital yo pou refòme ak modènize edikasyon travayè swen sante, ak amelyore kalite ak aksè nan swen sante pou VIH, tibèkiloz ak lòt enfeksyon k ap parèt nan tout peyi a."
+          "Name": "[HT] Lisa A. Cosimi, MD",
+          "Affiliations": "[HT] Associate Physician, Infectious Diseases & Global Health Equity, Brigham and Women’s Hospital; Assistant Professor, Harvard Medical School",
+          "Info": "[HT] Dr. Cosimi is an Associate Physician in the Divisions of Global Health Equity & Infectious Diseases at Brigham & Women’s Hospital, and Assistant Professor of Medicine at Harvard Medical School. Her research focuses on ways to strengthen health systems and the quality of healthcare in resource-limited settings."
         },
         {
-          "Name": "Doktè Deborah T. Hung, MD, PhD",
-          "Affiliations": "Pwofesè agreje, maladi enfektyez, swen pilmonè, ak swen entansif nan Harvard Medical School",
-          "Info": "Doktè Deborah Hung se pwofesè nan jenetik nan Massachusetts General Hospital Harvard Medical School, yon manm prensipal fakilte a ak ko-direktris pwogram maladi enfektyez ak mikwobyòm nan Broad Institute of MIT and Harvard, epi yon medsen tretan nan maladi enfektyez ak medsin swen pilmonè ak swen entansif nan Brigham and Women’s Hospital. Li travay nan entèfas byoloji chimik, jenomik, ak patojenèz bakteryèn pou etabli nouvo paradigm pou yon antibyotik baze sou biyoloji esansyèl ki nesesè pou yon patojèn lakòz maladi kay moun li antre sou li an. Avèk itilizasyon fòmasyon li kòm chimis sentetik, jenetisyen bakteryèn, ak medsen klinik, li eksplore apwòch pou deranje entèraksyon an patojèn-ot."
+          "Name": "[HT] Deborah T. Hung, MD, PhD",
+          "Affiliations": "[HT] Professor, Harvard Medical School; Core faculty member and Co-director, Infectious Disease and Microbiome Program, Broad Institute",
+          "Info": "[HT] Dr. Deborah Hung is a physician scientist at the Broad Institute, Harvard Medical School and Massachusetts General Hospital who studies infectious diseases and is an attending physician in infectious diseases and pulmonary & critical care medicine at Brigham and Women’s Hospital."
+        }
+      ],
+      "Others": [
+        {
+          "Title": "[HT] Administrative Team, Broad Institute",
+          "Members": [
+            "[HT] Andrea Saltzman, Director, Office of Research Subject Protection",
+            "[HT] Marissa Jenko, MS, Administrative Lead",
+            "[HT] Paul Tyman, Administrative Assistant",
+            "[HT] Sarah Winnicki, Project Manager II",
+            "[HT] Sharon Wong, PhD, Associate Director - Infectious Disease and Microbiome Program"
+          ]
+        },
+        {
+          "Title": "[HT] Engineering Team, Broad Institute",
+          "Members": [
+            "[HT] Andrew Zimmer, Director, Data Donation Platform",
+            "[HT] Anna Hupalowska, Illustration & Data Visualization Designer",
+            "[HT] Erin Gwozdz, UX/UI Designer",
+            "[HT] Jen Lapan, Principal Software Product Manager",
+            "[HT] Kiara Westbrooks, Software Engineer",
+            "[HT] Marco Ocana, Principal Software Engineer",
+            "[HT] Pavel Sidorenko, Software Engineer",
+            "[HT] Pegah Taheri, Software Engineer",
+            "[HT] Sampath Settipalli, Senior Software Engineer",
+            "[HT] Simone Maiwald, Software Engineering Manager",
+            "[HT] Yufeng Wang, Senior Software Engineer"
+          ]
+        },
+        {
+          "Title": "[HT] Clinical Team, Brigham and Women’s Hospital",
+          "Members": [
+            "[HT] Andy Kim, BS, Research Coordinator",
+            "[HT] Hannah Laibinis, Intern",
+            "[HT] Henry Manigat, Translator",
+            "[HT] Henry Rutherford, BA, Research Coordinator",
+            "[HT] Himaja Nagireddy, HSPH MS Candidate, Intern",
+            "[HT] Sarah Naz-McLean, MSc, Program Manager",
+            "[HT] Tina Wang, Translator",
+            "[HT] Yilu Ma, Translator"
+          ]
+        },
+        {
+          "Title": "[HT] Additional Partners",
+          "Members": [
+            "[HT] Microbial Omics Core (MOC), Broad Institute",
+            "[HT] Clinical Research Sequencing Platform (CRSP), Broad Institute",
+            "[HT] Mascon Medical",
+            "[HT] GBF",
+            "[HT] UPS"
+          ]
         }
       ]
     },
